minor fix: fix text align

--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@ section {
 }
 .home-content p {
   position: relative;
+  text-align: justify;
+  width: 99%;
   font-size: 1.6rem;
   margin: 2rem 0 4rem;
 }
@@ -303,12 +305,14 @@ span {
 }
 .about-content h3 {
   position: relative;
+  margin-bottom: 3rem;
+  margin-top: 3rem;
   display: inline-block;
   font-size: 2.6rem;
 }
 .about-content p {
   position: relative;
-  text-align: center;
+  text-align: justify;
   width: 70%;
   font-size: 1.6rem;
   margin: 2rem 0 3rem;
@@ -400,6 +404,7 @@ span {
   font-size: 2rem;
 }
 .education-content .content p {
+  text-align: justify;
   font-size: 1.6rem;
   padding-top: 0.5rem;
 }
@@ -588,6 +593,7 @@ span {
   font-size: 3rem;
 }
 .projects-layer p {
+  text-align: justify;
   font-size: 1.6rem;
   margin: .3rem 0 1rem;
 }
